--- a/Config/MyClash.ini
+++ b/Config/MyClash.ini
@@ -43,9 +43,9 @@ ruleset=⛷️ 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_r
 ruleset=⛷️ 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Sony/Sony.list
 ruleset=⛷️ 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Nintendo/Nintendo.list
 ruleset=⛷️ Steam,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.list
-ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
-ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
+ruleset=⛱️ 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
+ruleset=⛱️ 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
+ruleset=⛱️ 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
@@ -59,35 +59,35 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rul
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Alibaba/Alibaba.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Huawei/Huawei.list
 ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
-ruleset=🐠 漏网之鱼,[]FINAL
+ruleset=🐟 漏网之鱼,[]FINAL
 
 
-custom_proxy_group=💯️ TMDB`select`[]🇺🇸 美国节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
-custom_proxy_group=🚀 GitHub`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点
-custom_proxy_group=✈️ Telegram`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点
-custom_proxy_group=🦜 Twitter`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点
-custom_proxy_group=🚁‍ Copilot`select`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
-custom_proxy_group=🐦‍🔥 YouTube`select`[]🚀 节点选择`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点
-custom_proxy_group=🎥 HBO`select`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
-custom_proxy_group=🎻 Spotify`select`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
-custom_proxy_group=🌎 国外媒体`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点
-custom_proxy_group=🦚 谷歌服务`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`
-custom_proxy_group=🍏 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
-custom_proxy_group=⛷️ 游戏平台`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
-custom_proxy_group=⛷️ Steam`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
-custom_proxy_group=🚀 测速工具`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
-custom_proxy_group=📀 Emby`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
-custom_proxy_group=🪂 TikTok`select`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
-custom_proxy_group=🧿 Netflix`select`[]🇸🇬 坡县节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
-custom_proxy_group=🎅🏻 Disney`select`[]🇸🇬 坡县节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
-custom_proxy_group=☃️‍ ChatGPT`select`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
+custom_proxy_group=💯️ TMDB`select`[]🇺🇸 美国节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
+custom_proxy_group=🚀 GitHub`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点
+custom_proxy_group=✈️ Telegram`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点
+custom_proxy_group=🦜 Twitter`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点
+custom_proxy_group=🚁‍ Copilot`select`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
+custom_proxy_group=🐦‍🔥 YouTube`select`[]⛱️ 节点选择`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点
+custom_proxy_group=🎥 HBO`select`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
+custom_proxy_group=🎻 Spotify`select`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
+custom_proxy_group=🌎 国外媒体`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点
+custom_proxy_group=🦚 谷歌服务`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`
+custom_proxy_group=🍏 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
+custom_proxy_group=⛷️ 游戏平台`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
+custom_proxy_group=⛷️ Steam`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
+custom_proxy_group=🚀 测速工具`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
+custom_proxy_group=📀 Emby`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
+custom_proxy_group=🪂 TikTok`select`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
+custom_proxy_group=🧿 Netflix`select`[]🇸🇬 坡县节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
+custom_proxy_group=🎅🏻 Disney`select`[]🇸🇬 坡县节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
+custom_proxy_group=☃️‍ ChatGPT`select`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
 custom_proxy_group=⛔ 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=☘️ 应用净化`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐠 漏网之鱼`select`[]🚀 节点选择`[]REJECT
+custom_proxy_group=🐟 漏网之鱼`select`[]⛱️ 节点选择`[]REJECT
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]♻️ 自动选择
-custom_proxy_group=📺 Bahamut`select`[]🇹🇼 湾湾节点`[]🚀 节点选择
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🎯 全球直连`.*
+custom_proxy_group=📺 Bahamut`select`[]🇹🇼 湾湾节点`[]⛱️ 节点选择
+custom_proxy_group=⛱️ 节点选择`select`[]♻️ 自动选择`[]🎯 全球直连`.*
 custom_proxy_group=📺 国内媒体`select`[]🎯 全球直连`[]🇹🇼 湾湾节点`[]🇭🇰 香港节点
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🎸 网易音乐`select`[]🎯 全球直连`[]♻️ 自动选择`(网易|音乐|解锁|Music|NetEase)
