--- a/Config/MyClash.ini
+++ b/Config/MyClash.ini
@@ -59,7 +59,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rul
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Alibaba/Alibaba.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Huawei/Huawei.list
 ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
-ruleset=🐟 漏网之鱼,[]FINAL
+ruleset=🐠 漏网之鱼,[]FINAL
 
 
 custom_proxy_group=💯️ TMDB`select`[]🇺🇸 美国节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
@@ -84,7 +84,7 @@ custom_proxy_group=🎅🏻 Disney`select`[]🇸🇬 坡县节点`[]🇭🇰 香
 custom_proxy_group=☃️‍ ChatGPT`select`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
 custom_proxy_group=⛔ 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=☘️ 应用净化`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]⛱️ 节点选择`[]REJECT
+custom_proxy_group=🐠 漏网之鱼`select`[]⛱️ 节点选择`[]REJECT
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]♻️ 自动选择
 custom_proxy_group=📺 Bahamut`select`[]🇹🇼 湾湾节点`[]⛱️ 节点选择
 custom_proxy_group=⛱️ 节点选择`select`[]♻️ 自动选择`[]🎯 全球直连`.*
