--- a/Config/MyClashMAX.ini
+++ b/Config/MyClashMAX.ini
@@ -1,8 +1,8 @@
 [custom]
 ;解决DNS泄露，简易分流群组
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/MusicLifa/MyRule/refs/heads/main/Ruleset/MyDirect1.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/MusicLifa/MyRule/main/Ruleset/MyDirect1.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Direct.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Direct/Direct.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PrivateTracker/PrivateTracker.list
 ruleset=💯️ 电影刮削,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Tmdb/Tmdb.list
 ruleset=💯️ 电影刮削,https://raw.githubusercontent.com/akaet/openclash-rules/main/ruleset/TMDB.list
@@ -41,7 +41,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Download/Download.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/ChinaMax/ChinaMax.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax.list,no-resolve
 ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐠 漏网之鱼,[]FINAL
 
